Working corrected version with many-to-one